--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -1,4 +1,4 @@
-name: release-android
+name: 安卓端打包
 
 on:
   workflow_dispatch:
@@ -9,26 +9,26 @@ jobs:
   build-android:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: Setup Java
+      - name: 安装 Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      - name: Setup Gradle
+      - name: 安装 Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Run Android unit tests
+      - name: 运行安卓单元测试
         run: gradle -p app test
 
-      - name: Build release APK
+      - name: 构建发布版 APK
         run: gradle -p app :app:assembleRelease
 
-      - name: Upload APK artifact
+      - name: 上传 APK 产物
         uses: actions/upload-artifact@v4
         with:
-          name: android-apk
+          name: 安卓APK
           path: app/app/build/outputs/apk/release/*.apk
