--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
 
     <application
         android:allowBackup="false"
-        android:label="LinkMyComputer"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.LinkMyComputer"
         android:supportsRtl="true">
         <activity
             android:name=".player.PlayerActivity"
