fix: 修正Android启动Activity类名

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:theme="@style/Theme.LinkMyComputer"
         android:supportsRtl="true">
         <activity
-            android:name=".player.PlayerActivity"
+            android:name=".PlayerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
